[tool.poetry]
name = "algorithm-python"
version = "0.1.0"
description = ""
authors = ["Xiaojing.Chen <d29107d@gmail.com>"]
readme = "README.md"
packages = [{include = "algorithm_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
